[package]
name = "kosei"
version = "0.1.2"
edition = "2021"
authors = ["iGxnon"]
license = "MIT"
readme = "README.md"
description = """
A easy-to-use configuration crate with the Rust programming language.
"""
categories = ["config"]
keywords = ["config", "apollo", "configuration"]
repository = "https://github.com/iGxnon/kosei"

[features]
default = ["dynamic"]
dynamic = []
apollo = []
full = ["dynamic", "apollo"]

[dependencies.parking_lot]
version = "0.12"

[dependencies.tokio]
version = "1.23.0"
features = ["sync", "rt", "macros"]

[dependencies.tracing]
version = "0.1"

[dependencies.notify]
version = "5.0.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.9"

[dependencies.toml]
version = "0.5"

[dependencies.urlencoding]
version = "2.1"

[dependencies.sha1]
version = "0.10"

[dependencies.hmac]
version = "0.12"

[dependencies.base64]
version = "0.20"

[dev-dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dev-dependencies.kosei]
path = "."
features = ["full"]